--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/kOracleCRUDS.jar
+dist.jar=${dist.dir}/crud-abogado.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/kOracleCRUDS
+dist.jlink.output=${dist.jlink.dir}/crud-abogado
 excludes=
 file.reference.KControls-2.0.jar=lib/KControls-2.0.jar
 file.reference.ojdbc11.jar=lib\\ojdbc11.jar
@@ -75,8 +75,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=kOracleCRUDS
-main.class=vistas.jfrEstudiantes
+jlink.launcher.name=crud-abogado
+main.class=vistas.jfrAbogado
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
